# MdxScraper

./: .gitignore  .gitmodules  MdxScraper.py  MdxScraper.vbs  README.md  pyproject.toml  settings.py
.github/workflows/: release.yml  version-check.yml
data/input/: words_to_lookup.txt
data/mdict/: drop mdict files here.txt
data/mdict/Learn These Words First/: Learn These Words First.mdd  Learn These Words First.mdd.db  Learn These Words First.mdx.db
data/output/: 20250922-082733_lookup_results.html
docs/: Development_Guide.md  GUI_Development_Guide.md  GUI_refactor.md  README.md  Testing_Guide.md  changelog.md  csspdf_refactor.md  development.md  development_config_refactor.md  main_window_modularization_plan.md  mdx2html.md  preset_selection_unification.md  scrape_button_flow_analysis.md  theme_switcher_plan.md  version_management_guide.md
docs/Legacy refactor plan/: architecture_refactor_plan.md  main_window_modularization_plan.md  style_unification_plan.md
docs/analysis/: mdx2html_evolution_analysis.md  scrape_button_flow_analysis.md
docs/api/: config.md  config_example.md  core.md  utils.md
docs/assets/images/: app_icon.gfie
docs/backup/: settings.py
input/: words_to_lookup.json  words_to_lookup.txt  words_to_lookup.xlsx
lib/mdict-query/: mdict_query.py
lib/mdict/sample/: Learn These Words First.mdx  ltwf.css
scripts/: release.py
src/mdxscraper/: __init__.py  __main__.py  migrate_config.py  version.py
src/mdxscraper/config/: __init__.py  config_manager.py  default_config.toml
tests/: __init__.py  conftest.py  test_about_page.py  test_about_page.py.bak  test_config_coordinator.py  test_config_models.py  test_conversion_coordinator.py  test_converter.py  test_dictionary.py  test_export_service.py  test_file_coordinator.py  test_file_utils.py  test_main_entry.py  test_parser.py  test_path_utils.py  test_preset_coordinator.py  test_preset_models.py  test_preset_unification.py  test_presets_service.py  test_renderer.py  test_settings_service.py  test_system_utils.py  test_time_utils.py  test_unified_config_service.py
tests/config/: test_config_manager_extras.py  test_config_manager_getters.py
tests/coordinators/: __init__.py  test_config_coordinator_validate_wkhtmltopdf.py  test_config_export_config.py  test_conversion_coordinator_on_log.py  test_file_coordinator_extras.py  test_preset_coordinator.py
tests/core/: __init__.py  test_converter_progress_callbacks.py  test_dictionary_extras.py  test_parser_open_encoding.py
tests/fixtures/: __init__.py  mock_objects.py  sample_data.py
tests/gui/: __init__.py  test_about_page.py  test_main_window_actions.py  test_main_window_config_sync_and_edits.py  test_main_window_smoke.py  test_main_window_splitter_choose_output.py  test_main_window_splitter_lifecycle.py  test_run_gui_entry.py
tests/integration/: __init__.py
tests/models/: __init__.py  test_config_models.py  test_version_module.py
tests/services/: __init__.py  test_settings_and_presets_extras.py  test_settings_service.py  test_settings_service_gui_helpers.py  test_unified_config_service.py  test_version_check_service.py
tests/utils/: __init__.py  test_file_utils.py  test_path_utils.py  test_path_utils_extras.py  test_time_utils.py
tests/workers/: test_conversion_worker_run.py
(+82 files in other folders)
