[project]
name = "MdxScraper"
version = "3.7.0"
description = "Scraping web pages and convert to clean, readable Markdown files."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0" }
authors = [
  { name = "VimWei" }
]
dependencies = [
    'imgkit>=1.2.3',
    'pdfkit>=1.0.0',
    'openpyxl>=3.1.5',
    'chardet>=5.2.0',
    'beautifulsoup4>=4.13.5',
    'lxml>=6.0.1'
]

[project.urls]
Homepage = "https://github.com/VimWei/MdxScraper"
Repository = "https://github.com/VimWei/MdxScraper"
