[project]
name = "MdxScraper"
version = "5.0.1"
description = "Scraping web pages and convert to clean, readable Markdown files."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0" }
authors = [
  { name = "VimWei" }
]
dependencies = [
    'imgkit>=1.2.3',
    'pdfkit>=1.0.0',
    'openpyxl>=3.1.5',
    'chardet>=5.2.0',
    'beautifulsoup4>=4.13.5',
    'lxml>=6.0.1',
    'tomli-w>=1.0.0',
    'PySide6>=6.7.0',
    'Pillow>=10.0.0',
]

[project.urls]
Homepage = "https://github.com/VimWei/MdxScraper"
Repository = "https://github.com/VimWei/MdxScraper"

[project.scripts]
mdxscraper = "mdxscraper.gui.main_window:run_gui"

[tool.uv]
package = true

[dependency-groups]
dev = [
    'pytest>=8.3.0',
    'black>=24.8.0',
    'isort>=5.13.2',
    'mypy>=1.11.2',
    'pre-commit>=3.8.0',
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = "tests/.pytest_cache"